jd03_03 A, jd03_04ABC

--- a/src/by/it/tsiamruk/jd03_04/loginpage.html
+++ b/src/by/it/tsiamruk/jd03_04/loginpage.html
@@ -9,7 +9,7 @@
   <label class="col-md-4 control-label" for="login">Login</label>
   <div class="col-md-4">
   <input id="login" name="login" type="text" placeholder="Login" class="form-control input-md" required="">
-  <span class="help-block">This is yout login</span>
+  <span class="help-block">This is your login</span>
   </div>
 </div>
 
@@ -24,18 +24,18 @@
 
 <!-- Multiple Radios -->
 <div class="form-group">
-  <label class="col-md-4 control-label" for="radios">Multiple Radios</label>
+  <label class="col-md-4 control-label" for="radios">choose role</label>
   <div class="col-md-4">
   <div class="radio">
     <label for="radios-0">
       <input type="radio" name="radios" id="radios-0" value="1" checked="checked">
-      Option one
+      user
     </label>
 	</div>
   <div class="radio">
     <label for="radios-1">
       <input type="radio" name="radios" id="radios-1" value="2">
-      Option two
+      admin
     </label>
 	</div>
   </div>
